// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultAvatarGroup /> should render correctly 1`] = `
<DefaultAvatarGroup__Container
  height="45px"
  role="img"
  version="1.1"
  viewBox="-8 -7 40 40"
  width="45px"
  x="0px"
  xmlns="http://www.w3.org/2000/svg"
  y="0px"
>
  <circle
    className="cls-1"
    cx="7.5"
    cy="7.75"
    fill="none"
    r="4.25"
    stroke="#FFFFFF"
  />
  <path
    className="cls-1"
    d="M.5,20.5a7,7,0,0,1,14,0Z"
    fill="none"
    stroke="#FFFFFF"
  />
  <path
    className="cls-1"
    d="M13.26,5A4.249,4.249,0,1,1,14,11.189a4.381,4.381,0,0,1-.5-.429"
    fill="none"
    stroke="#FFFFFF"
  />
  <path
    className="cls-1"
    d="M14.5,13.79a7.005,7.005,0,0,1,9,6.71H17"
    fill="none"
    stroke="#FFFFFF"
  />
</DefaultAvatarGroup__Container>
`;

exports[`<DefaultAvatarGroup /> should render correctly with other size 1`] = `
<DefaultAvatarGroup__Container
  height="30px"
  role="img"
  version="1.1"
  viewBox="-8 -7 40 40"
  width="30px"
  x="0px"
  xmlns="http://www.w3.org/2000/svg"
  y="0px"
>
  <circle
    className="cls-1"
    cx="7.5"
    cy="7.75"
    fill="none"
    r="4.25"
    stroke="#FFFFFF"
  />
  <path
    className="cls-1"
    d="M.5,20.5a7,7,0,0,1,14,0Z"
    fill="none"
    stroke="#FFFFFF"
  />
  <path
    className="cls-1"
    d="M13.26,5A4.249,4.249,0,1,1,14,11.189a4.381,4.381,0,0,1-.5-.429"
    fill="none"
    stroke="#FFFFFF"
  />
  <path
    className="cls-1"
    d="M14.5,13.79a7.005,7.005,0,0,1,9,6.71H17"
    fill="none"
    stroke="#FFFFFF"
  />
</DefaultAvatarGroup__Container>
`;
